--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Prompt & Project Previewer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <!-- Babel for on-the-fly TSX transpilation in preview -->
+    <!-- Babel para transpilação TSX no preview -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
-    "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.46.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -27,11 +27,15 @@
         margin: 0;
         background-color: #09090b; /* zinc-950 */
         color: #f4f4f5; /* zinc-100 */
+        overflow: hidden;
       }
       ::-webkit-scrollbar { width: 8px; height: 8px; }
       ::-webkit-scrollbar-track { background: #18181b; }
       ::-webkit-scrollbar-thumb { background: #3f3f46; border-radius: 4px; }
       ::-webkit-scrollbar-thumb:hover { background: #52525b; }
+      
+      /* Previne flashes brancos em iframes */
+      iframe { background: white; }
     </style>
   </head>
   <body class="bg-zinc-950 text-zinc-100">
